# TrendCurator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SKILLS.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/agents/: __init__.py  chunker.py  date_range_parser.py  digest_generator.py  embedder.py  intent_router.py  metadata_extractor.py  query_rewriter.py  relevance_filter.py  retriever.py  solar_relevance_filter.py
app/api/: dashboard.py  digest.py  documents.py  groundedness.py  pipeline.py  profile.py  query.py  responses.py  scheduler.py
app/collectors/: base.py  hackernews.py  huggingface.py
app/core/: __init__.py  chroma_client.py  embedding_client.py  llm_client.py  models.py  scheduler_settings.py  settings.py  solar_client.py  solar_llm_client.py
app/graphs/: __init__.py  query_graph.py
app/prompts/: __init__.py  metadata_extractor.md  (+6 more)
docs/: api-spec.md  architecture.md  internal-api-spec.md  workflow.md
frontend/: Dockerfile  streamlit_app.py
scripts/: __init__.py  evaluate_relevance_samples.py  run_llm_query_demo.py  run_scheduled_digest.py  smoke_solar_relevance.py
tests/: conftest.py  test_evaluate_relevance_samples.py  test_main_demo_bootstrap.py  test_main_lifespan_reset.py  test_relevance_filter.py  test_run_scheduled_digest.py  test_scheduler.py  test_scheduler_settings.py  test_settings.py  test_smoke.py  test_solar_client.py  test_solar_relevance_filter.py
(+53 files in other folders)
