[project]
name = "trendcurator"
version = "0.1.0"
description = "AI 에이전트 트렌드 큐레이션 파이프라인"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "chromadb>=0.5",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "streamlit>=1.35",
    "langgraph>=0.2",
    "ragas>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
